# piilog_func

./: .gitignore  Cargo.toml  README.md  curl_test_func.sh  host.json  run.sh  run_func.sh  test_func.sh
kafka/: .env  ca-cert  ca-cert.pem  ca-key  cert-file  docker-compose.yml  generate_keys.sh  kafka.server.keystore.jks  kafka.server.truststore.jks  run.sh
kafka/secrets/: broker.keystore.jks  broker.truststore.jks  consumer.keystore.jks  consumer.truststore.jks  example_com.pfx  keystore.p12  producer.keystore.jks  producer.keystore.jks.pem  producer.keystore.pem  producer.truststore.jks  schema-registry.keystore.jks  schema-registry.truststore.jks
src/: apis.rs  azure_utils.rs  main.rs  models.rs
