[package]
name = "piilog_func"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4" , features =["rustls"]}
azure_core = { version = "0.16",default-features = false, features = ["enable_reqwest_rustls","tokio"] }
azure_identity = { version = "0.16", default-features = false, features = ["enable_reqwest_rustls"] }
azure_storage_blobs = "0.16"
logs = "0.7"
pretty_env_logger = "0.5"
rdkafka = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3",default-features = false, features = ["local-offset","std"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

